<resources>
    <string name="tfthobmodule_app_name">CataTFTProject</string>
    <string name="tfthobmodule_temperature_unit">°</string>
    <string name="tfthobmodule_timer_symbol">:</string>
    <string name="tfthobmodule_demo">DEMO</string>
    <string name="tfthobmodule_food_type_cooking_table">Cooking Tables\n\n</string>
    <string name="tfthobmodule_food_type_personalize">My Recipes\n\n</string>
    <string name="tfthobmodule_cooking_tables_type_meat">Meat</string>
    <string name="tfthobmodule_cooking_tables_type_legumes_and_cereals">Legumes &amp; Cereals</string>
    <string name="tfthobmodule_cooking_tables_type_fruit">Fruits</string>
    <string name="tfthobmodule_cooking_tables_type_shellfish">Shellfish</string>
    <string name="tfthobmodule_cooking_tables_type_vegetables">Vegetables</string>
    <string name="tfthobmodule_cooking_tables_type_fish">Fish</string>
    <string name="tfthobmodule_recipes_subclass_title_vegetables_with_a_conit_of_wild_mushrooms">Vegetables with a conit\nof wild mushrooms</string>
    <string name="tfthobmodule_recipes_subclass_title_vegetables_1">Vegetables 1</string>
    <string name="tfthobmodule_recipes_subclass_title_vegetables_2">Vegetables 2</string>
    <string name="tfthobmodule_recipes_subclass_title_vegetables_3">Vegetables 3</string>
    <string name="tfthobmodule_recipes_subclass_title_vegetables_4">Vegetables 4</string>
    <string name="tfthobmodule_recipes_subclass_title_vegetables_5">Vegetables 5</string>
    <string name="tfthobmodule_recipes_subclass_title_red_mullet">Red Mullet With Citrus Fruits</string>
    <string name="tfthobmodule_recipes_subclass_title_difficulty">DIFFICULTY:</string>
    <string name="tfthobmodule_recipes_subclass_title_low">Low</string>
    <string name="tfthobmodule_recipes_subclass_title_total_preparation">TOTAL PREPARATION:</string>
    <string name="tfthobmodule_recipes_subclass_title_30min">30min</string>
    <string name="tfthobmodule_recipes_subclass_title_type">TYPE:</string>
    <string name="tfthobmodule_recipes_subclass_title_fish">Fish</string>
    <string name="tfthobmodule_recipes_subclass_title_introduction">INTRODUCTION:</string>
    <string name="tfthobmodule_recipes_subclass_message">Cooking in a microwave oven can be a good way of gently cooking food even though it is not a totally precise method. In this recipe we propose some magnificent red mullet protected by lemon leaves that will lend the dish a fresh citrus aroma. We will use low power in order to respect the food’s point of doneness.\nINGREDIENTS:
4 pieces red mullet
4 lemon leaves (or similar
1 lemon
1 French onion (shallot)
70 g butter (10 for sautéing and 60 for the lemon sauce)
Chervil
12 saffron threads
50g sunflower oil
1 l brine (1 l water per 100 g salt)
Salt and pepper

WHAT YOU NEED: Microwave oven, Steam case

GENERAL INFORMATION: Microwave oven 400w | 1min

Step 1
Peel the onion and cut it brunoise-style. Fry in the butter (10 g) on a gentle heat for 5 minutes. Add the juice of one lemon and leave to reduce.

Step 2
Leave to cool and whip with butter (60 g) by gradually adding cubes of butter (this preparation is similar to so-called beurre blanc). Add salt and pepper, mix and set to one side.

Step 3
For the saffron oil, put the saffron on a tray and dry in the oven for 20 seconds at 180 degrees. Next, mix with the sunflower oil and the salt.

Step 4
Soak the red mullet pieces in brine with 10% salt for 5 minutes.

Step 5
Dry the fish and cover it with the lemon leaves. Cook in the microwave for between 1 and 1’30 minutes depending on the thickness of the fish.

Step 6
To serve, make a base of sauce in each dish, add the red mullet (without the lemon leaves), dress mildly with the saffron oil and decorate with the chervil.
</string>
    <string name="tfthobmodule_recipes_food_detail_title_cooking_method">Cooking method:\nImmersed in liqid</string>
    <string name="tfthobmodule_fragment_relate_recipes_title">Related Recipes</string>
    <string name="tfthobmodule_fragment_my_recipes_title">My Recipes</string>
    <string name="tfthobmodule_fragment_my_recipes_title_new">New</string>
    <string name="tfthobmodule_fragment_my_recipes_confirm_delete_recipe">Confirm that you want to delete the recipe</string>
    <string name="tfthobmodule_fragment_my_recipes_edit_title_name">Name</string>
    <string name="tfthobmodule_fragment_my_recipes_edit_title_power">Power</string>
    <string name="tfthobmodule_fragment_my_recipes_edit_title_temp">Temperature</string>
    <string name="tfthobmodule_fragment_my_recipes_edit_title_time">Time</string>
    <string name="tfthobmodule_fragment_my_recipes_edit_title_description">Description</string>
    <string name="tfthobmodule_fragment_my_recipes_edit_title_save">Save</string>
    <string name="tfthobmodule_fragment_my_recipes_edit_title_cook">Cook</string>
    <string name="tfthobmodule_cooker_setting_panel_tips_message">Use the scroll to set the power level.</string>
    <string name="tfthobmodule_tips_message_search_and_connect_temp_sensor">Search and connect temperature sensor.</string>
    <string name="tfthobmodule_title_boost">BOOST</string>
    <string name="tfthobmodule_title_precise">Precise</string>
    <string name="tfthobmodule_title_fast">Fast</string>
    <string name="tfthobmodule_title_back">Back</string>
    <string name="tfthobmodule_title_boiling">Boiling</string>
    <string name="tfthobmodule_title_simering">Simering</string>
    <string name="tfthobmodule_title_slow_cook">Slow Cook</string>
    <string name="tfthobmodule_title_keep_warm">Keep Warm</string>
    <string name="tfthobmodule_title_melting">Melting</string>
    <string name="tfthobmodule_title_destination_software">Destination version: %1$s Total Size: %2$d bytes</string>
    <string name="tfthobmodule_msg_downloading_apk">Downloading the apk file &#8230;&#8230;&#8230;</string>
    <string name="tfthobmodule_msg_download_complete">Downloading process completed successfully</string>
    <string name="tfthobmodule_err_er03_title">Please remove the water or cookware on the glass over the screen.</string>
    <string name="tfthobmodule_err_e1">E1E Thermal shutdown. Please restart after the induction hob has cooled down.</string>
    <string name="tfthobmodule_err_e2">E2E Thermal shutdown. Please restart after the induction hob has cooled down.</string>
    <string name="tfthobmodule_err_e3">E3E Supply voltage out of range.</string>
    <string name="tfthobmodule_err_e4">E4E Supply voltage out of range.</string>
    <string name="tfthobmodule_err_e5">E5E Error on a cooking zone. Call the technical service</string>
    <string name="tfthobmodule_err_f1">F1E Error on a cooking zone. Call the technical service</string>
    <string name="tfthobmodule_err_f3">F3E Error on a cooking zone. Call the technical service</string>
    <string name="tfthobmodule_err_f4">F4E Error on a cooking zone. Call the technical service</string>
    <string name="tfthobmodule_err_r1e">R1E Battery level of the external sensor is too low for the requested cooking process. Please charge the battery.</string>
    <string name="tfthobmodule_err_r2e">R2E Battery level of the external sensor is too low for the requested cooking process. Please charge the battery.</string>
    <string name="tfthobmodule_err_r3e">R3E Battery completely discharged, connect it to an external power supply and link again.</string>
    <string name="tfthobmodule_err_r4e">R4E The sensor link was interrupted.Please check the battery or contact with the manufacturer.</string>
    <string name="tfthobmodule_err_r5e">R5E External sensor failure.Check the sensor position, if the failure persist contact with the manufacturer.</string>
    <string name="tfthobmodule_err_r6e">R6E External sensor failure.Check the sensor position, if the failure persist contact with the manufacturer.</string>
    <string name="tfthobmodule_err_r7e">R7E External sensor failure.Check the sensor position, if the failure persist contact with the manufacturer.</string>
    <string name="tfthobmodule_dialog_message_sensor_connect_successfully">External sensor successfully connected.</string>
    <string name="tfthobmodule_dialog_message_sensor_disconnect">External sensor disconnected.</string>
    <string name="tfthobmodule_dialog_message_complete_recipe">Please complete the recipe first</string>
    <string name="tfthobmodule_hob_setting_fragment_toast_content">To cook in Precise mode link the external temperature sensor turning it on.\nRemember charge the sensor battery or connect to the external supply.</string>
    <string name="tfthobmodule_my_recipes_edit_fragment_toast_content">Introduce your recipe. Then click to save.</string>
    <string name="tfthobmodule_hob_recipes_edit_fragment_toast_content_name">Type the name of the recipe.</string>
    <string name="tfthobmodule_hob_recipes_edit_fragment_toast_content_temp">Select the temperature.</string>
    <string name="tfthobmodule_hob_recipes_edit_fragment_toast_content_time">Select the time.</string>
    <string name="tfthobmodule_hob_recipes_edit_fragment_toast_content_desc">Describe the recipe.</string>
    <string name="tfthobmodule_hob_cooking_table_detail_fragment_toast_content">The cooking process will start by click into the play icon. To get a higher control of the temperature link an external sensor and then put the mode precise.</string>
</resources>