<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginRight="150dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:paddingTop="@dimen/tfthobmodule_padding_normal"
        android:paddingBottom="@dimen/tfthobmodule_padding_normal"
        android:paddingStart="@dimen/tfthobmodule_padding_normal"
        android:paddingEnd="@dimen/tfthobmodule_padding_right_back"
        android:textSize="@dimen/tfthobmodule_back_button_text_size"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:drawableStart="@mipmap/ic_back"
        android:drawablePadding="10dp"
        android:text="@string/tfthobmodule_title_back"
        android:visibility="visible"
        android:id="@+id/tv_back"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.ekek.viewmodule.common.FocusedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tfthobmodule_cooking_tables_type_meat"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_meat"
            android:paddingTop="40dp"
            android:id="@+id/tv_meat"
            android:clickable="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <com.ekek.viewmodule.common.FocusedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tfthobmodule_cooking_tables_type_legumes_and_cereals"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_legumes_and_cereals"
            android:paddingTop="30dp"
            android:id="@+id/tv_legumes_and_cereals"
            android:clickable="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <com.ekek.viewmodule.common.FocusedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tfthobmodule_cooking_tables_type_fruit"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_fruit"
            android:paddingTop="40dp"
            android:id="@+id/tv_fruit"
            android:clickable="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.ekek.viewmodule.common.FocusedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tfthobmodule_cooking_tables_type_shellfish"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_shellfish"
            android:paddingTop="30dp"
            android:id="@+id/tv_shellfish"
            android:clickable="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <com.ekek.viewmodule.common.FocusedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tfthobmodule_cooking_tables_type_vegetables"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_vegetables"
            android:paddingTop="30dp"
            android:id="@+id/tv_vegetables"
            android:clickable="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <com.ekek.viewmodule.common.FocusedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tfthobmodule_cooking_tables_type_fish"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_fish"
            android:paddingTop="60dp"
            android:id="@+id/tv_fish"
            android:clickable="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

    </LinearLayout>

</LinearLayout>